upgpkg: sweethome3d 7.1-1
git-svn-id: file:///srv/repos/svn-community/svn@1427254 9fca08f4-af9d-4005-b8df-a31f2cc04f65